--- a/contect.html
+++ b/contect.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
+    <title>Content Page</title>
 </head>
 <body>
-    <h1>This is our Index page in github</h1>
+    <h1>This is our content in github</h1>
 </body>
 </html>
